assets/sass/_page_styles.scss
.cover-page {
  header {
    background-color:#b2e1f4;
    padding-top:80px;
    margin-bottom: $default-spacing-small;
    height: 680px;

    display: flex;
    align-items: center;
    justify-content: center;

    h1, h2, h3 {
      width:80%;
      padding-left:20px;
      margin-bottom:24px;
      padding-bottom:0;
      margin-top:0;
      padding-top:0;
      color:#323232;
    }
    h2 {
      text-transform: none;
      font-family:'Calibre-Medium';
    }
    h3 {
     font-family:'Calibre-Bold';
     text-transform:uppercase;
     margin-bottom:0;
    }
    img {
      width:100%;
      display:block;
    }
    a#logo {
      img {
        margin-top:0;
      }
    }
  }
  .content {
    margin-bottom: $default-spacing-big;
  }
}

.scenario-1 {
  .highlight-section {
    background: #EEFDFF;
  }
}
.scenario-2 {
  .highlight-section {
    background: #EDFFFB;
  }
}

.scenario-3 {
  .highlight-section {
    background: #FEF1EA;
  }
}

.design-patterns {
  img {
    margin-top: 0;
  }
}

@media screen and (min-width: 800px) {
  .cover-page {
    header {
      margin-bottom: $default-spacing-big;

      h1, h2, h3 {
        padding:0;
        width:70%;
        margin-bottom: calc(#{$default-spacing-big});
      }
      div {
        padding: 0;
        width: $desktop-column-width;
        margin-left: auto;
        margin-right: auto;
      }
      h3 {
        position:relative;
      }
      img {
        margin-top:-100px;
        margin-left:auto;
        margin-right:auto;
      }
    }
  }
}

